<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:orderInCategory="0">
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_nav_weather"
            android:title="@string/nav_drawer_weather" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_nav_maps"
            android:title="@string/nav_drawer_maps" />
        <item
            android:id="@+id/nav_my_places"
            android:icon="@drawable/ic_nav_my_places"
            android:title="@string/nav_drawer_my_places" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_nav_profile"
            android:title="@string/nav_drawer_profile" />
    </group>

    <item android:title="@string/nav_drawer_option"
        android:orderInCategory="1">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_nav_logout"
                android:title="@string/nav_drawer_logout" />
        </menu>
    </item>

</menu>
